changes session with Alejo

--- a/index.html
+++ b/index.html
@@ -33,6 +33,47 @@
         .hero-overlay {
             background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.5));
         }
+
+        /* Custom Font Definitions */
+/* Custom Font Definitions */
+@font-face {
+    font-family: 'Momcake';
+    src: url('MomcakeBold-WyonA.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Momcake';
+    src: url('MomcakeThin-9Y6aZ.otf') format('opentype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+/* The Title Style */
+.japoneria-title {
+    font-family: 'Momcake', sans-serif !important;
+    /* font-weight: bold; */
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 0.3em; /* Slightly tighter for smaller sizes */
+    line-height: 1.2;
+    text-shadow: 
+        0px 8px 15px rgba(0, 0, 0, 0.4),
+        0px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+/* The Subtitle Style */
+.japoneria-subtitle {
+    font-family: 'Momcake', sans-serif !important;
+    font-weight: 300;
+    font-size: medium;
+    letter-spacing: 0.1em;
+    color: rgba(255, 255, 255, 0.9);
+    text-shadow: 0px 3px 8px rgba(0, 0, 0, 0.3);
+    display: block;
+    margin-top: 1rem;
+}
     </style>
 </head>
 <body class="bg-white text-jp-black font-sans antialiased">
@@ -51,8 +92,9 @@
                         <a href="#historia" class="text-sm font-medium text-gray-600 hover:text-jp-gold transition-colors uppercase tracking-widest">Historia</a>
                         <a href="#proyecto" class="text-sm font-medium text-gray-600 hover:text-jp-gold transition-colors uppercase tracking-widest">El Proyecto</a>
                         <a href="#equipo" class="text-sm font-medium text-gray-600 hover:text-jp-gold transition-colors uppercase tracking-widest">Equipo</a>
-                        <a href="#menu" class="text-sm font-medium text-gray-600 hover:text-jp-gold transition-colors uppercase tracking-widest">Menú</a>
-                        <a href="#contacto" class="px-6 py-2 border border-jp-black text-jp-black hover:bg-jp-black hover:text-white transition-all duration-300 uppercase text-xs tracking-widest font-bold">
+                        <a href="https://drive.google.com/file/d/1KUBCXMEnT6PubHCyaj617L0ZBptjz9g7/view?usp=drivesdk
+" class="text-sm font-medium text-gray-600 hover:text-jp-gold transition-colors uppercase tracking-widest">Menú</a>
+                        <a href="https://wa.link/Japoneria" class="px-6 py-2 border border-jp-black text-jp-black hover:bg-jp-black hover:text-white transition-all duration-300 uppercase text-xs tracking-widest font-bold">
                             Reservar
                         </a>
                     </div>
@@ -63,13 +105,25 @@
 
     <header id="inicio" class="relative h-screen flex items-center justify-center overflow-hidden">
         <div class="absolute inset-0 z-0">
-            <img src="https://images.unsplash.com/photo-1579584425555-c3ce17fd4351?q=80&w=2574&auto=format&fit=crop" alt="Ambiente Japonés" class="w-full h-full object-cover">
+            <img src="img/IMG06.jpg" alt="Ambiente Japonés" class="w-full h-full object-cover">
         </div>
         <div class="absolute inset-0 hero-overlay z-10"></div>
         <div class="relative z-20 text-center px-4 animate-fade-in-up">
             <p class="text-white text-sm md:text-base tracking-[0.4em] uppercase mb-4 drop-shadow-md">Medellín, Colombia</p>
-            <h1 class="font-serif text-5xl md:text-7xl lg:text-8xl text-white mb-6 tracking-wide leading-tight drop-shadow-lg">
-                JAPONERIA<br><span class="text-3xl md:text-5xl italic text-gray-100 font-light">S.A.S.</span>
+            <!-- <h1 class="font-serif text-5xl md:text-7xl lg:text-8xl text-white mb-6 tracking-wide leading-tight drop-shadow-lg">
+                JAPONERIA<br><span class="text-3xl md:text-5xl italic text-gray-100 font-light">Comida auténtica Japonesa</span>
+            </h1> -->
+            <!-- <h1 class="font-serif font-bold text-5xl md:text-7xl lg:text-8xl text-white mb-6 tracking-wide leading-tight drop-shadow-lg">
+                JAPONERIA<br>
+                <span class="text-3xl md:text-5xl italic text-gray-100 font-light">
+                    Comida auténtica Japonesa
+                </span>
+            </h1> -->
+            <h1 class="japoneria-title text-5xl md:text-5md lg:text-6md mb-6">
+                JAPONERIA
+                <span class="japoneria-subtitle">
+                    Comida auténtica Japonesa
+                </span>
             </h1>
             <div class="flex justify-center gap-6 mt-10">
                 <a href="#historia" class="px-8 py-3 bg-white text-jp-black font-bold text-xs uppercase tracking-widest hover:bg-jp-black hover:text-white transition-colors shadow-lg">
@@ -107,7 +161,7 @@
         <div class="max-w-5xl mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                 <div class="h-96 md:h-[500px] overflow-hidden relative shadow-xl">
-                    <img src="https://images.unsplash.com/photo-1621852004158-b3976696fb3d?q=80&w=2670&auto=format&fit=crop" class="absolute inset-0 w-full h-full object-cover" alt="Detalle Japonés">
+                    <img src="img/IMG07.jpg" class="absolute inset-0 w-full h-full object-cover" alt="Detalle Japonés">
                     <div class="absolute inset-0 bg-black/10"></div>
                 </div>
 
@@ -141,7 +195,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 max-w-4xl mx-auto">
                 <div class="flex flex-col items-center text-center group">
                     <div class="w-48 h-48 rounded-full overflow-hidden mb-6 shadow-lg border-4 border-gray-50">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=2000&auto=format&fit=crop" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500" alt="Alejandro Quiñones">
+                        <img src="img\IMG02.jpg" class="" alt="Alejandro Quiñones">
                     </div>
                     <h3 class="font-serif text-2xl text-jp-black mb-1">Alejandro Quiñones</h3>
                     <p class="text-jp-gold text-xs uppercase tracking-widest font-bold mb-4">General Manager</p>
@@ -152,7 +206,7 @@
 
                 <div class="flex flex-col items-center text-center group">
                     <div class="w-48 h-48 rounded-full overflow-hidden mb-6 shadow-lg border-4 border-gray-50">
-                        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=2000&auto=format&fit=crop" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500" alt="Yuka Tomita">
+                        <img src="img\IMG01.jpeg" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500" alt="Yuka Tomita">
                     </div>
                     <h3 class="font-serif text-2xl text-jp-black mb-1">Yuka Tomita</h3>
                     <p class="text-jp-gold text-xs uppercase tracking-widest font-bold mb-4">CEO</p>
@@ -173,7 +227,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="group bg-white shadow-md hover:shadow-xl transition-all duration-300 overflow-hidden cursor-pointer">
                     <div class="h-64 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1579871494447-9811cf80d66c?q=80&w=2670&auto=format&fit=crop" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Sushi">
+                        <img src="img/IMG03.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Sushi">
                     </div>
                     <div class="p-8 text-center">
                         <h3 class="font-serif text-2xl text-jp-black mb-2">Sushi & Nigiri</h3>
@@ -182,7 +236,7 @@
                 </div>
                 <div class="group bg-white shadow-md hover:shadow-xl transition-all duration-300 overflow-hidden cursor-pointer">
                     <div class="h-64 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1594051010777-a87f73db9420?q=80&w=2670&auto=format&fit=crop" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Ramen">
+                        <img src="img/IMG04.jpeg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Ramen">
                     </div>
                     <div class="p-8 text-center">
                         <h3 class="font-serif text-2xl text-jp-black mb-2">Platos Calientes</h3>
@@ -191,7 +245,7 @@
                 </div>
                 <div class="group bg-white shadow-md hover:shadow-xl transition-all duration-300 overflow-hidden cursor-pointer">
                     <div class="h-64 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?q=80&w=2670&auto=format&fit=crop" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Cocktails">
+                        <img src="img/IMG05.jpeg" alt="Cocktails">
                     </div>
                     <div class="p-8 text-center">
                         <h3 class="font-serif text-2xl text-jp-black mb-2">Cócteles</h3>
@@ -206,11 +260,15 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row justify-between items-center md:items-start text-center md:text-left gap-10">
                 <div class="md:w-1/3">
-                    <h3 class="font-serif text-2xl mb-4">Japoneria S.A.S</h3>
+                    <h3 class="font-serif text-2xl mb-4">Japoneria</h3>
                     <p class="text-gray-400 text-sm">Alta cocina japonesa en Medellín.</p>
                 </div>
                 <div class="md:w-1/3">
                     <h4 class="text-jp-gold uppercase tracking-widest text-xs font-bold mb-4">Visítanos</h4>
+                    <href></href>
+                    <a href="https://maps.app.goo.gl/Lo21LBU1f1cc9cic6">Ubicacion📍</a>
+                    
+                        
                     <p class="text-gray-400 font-light leading-relaxed">
                         Medellín, Antioquia<br>
                         Zona Rosa / El Poblado<br>
@@ -219,8 +277,8 @@
                 </div>
                 <div class="md:w-1/3">
                     <h4 class="text-jp-gold uppercase tracking-widest text-xs font-bold mb-4">Contacto</h4>
-                    <p class="text-gray-400 font-light mb-2">reservas@japanproject.com.co</p>
-                    <p class="text-white font-serif text-xl">+57 (300) 123-4567</p>
+                    <p class="text-gray-400 font-light mb-2">administracion@japanproject.com.co</p>
+                    <p class="text-white font-serif text-xl">+57 (304) 476-5861</p>
                 </div>
             </div>
             <div class="mt-20 pt-8 border-t border-white/10 text-center">
